Add: i18nを使用した書き方に変更

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -1,8 +1,9 @@
 ja:
   defaults:
     login: ログイン
-    submit: 登録
+    register: 新規登録
     logout: ログアウト
+    mypage: マイページ
   items:
     new:
       title: アイテム登録
