add: エラーメッセージ追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -17,3 +17,9 @@ ja:
       success: ユーザを登録しました
       fail: ユーザの登録に失敗しました
   user_sessions:
+    new:
+      title: ログイン
+    create:
+      success: ログインしました
+    destroy:
+      success: ログアウトしました
