Add: 退会機能を論理削除で実装する

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -24,6 +24,7 @@ ja:
     create:
       success: ログインしました
       fail: ログインに失敗しました
+      danger: 退会したユーザーです
     destroy:
       success: ログアウトしました
   profiles:
