--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -14,3 +14,7 @@ ja:
         email: メールアドレス
         password: パスワード
         password_confirmation: パスワード確認
+      contact:
+        name: 名前
+        email: メールアドレス
+        content: お問い合わせ内容
