--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -20,7 +20,7 @@ ja:
       success: アイテムを削除しました
   three_items:
     new:
-      title: アイテム3つ登録
+      title: アイテム登録
     create:
       success: アイテムを3つ登録しました
       fail: アイテムの登録に失敗しました
@@ -54,3 +54,8 @@ ja:
       title: お問い合わせ
     create:
       success: お問い合わせを受け付けました
+  static_pages:
+    uses:
+      title: 利用規約
+    privacy:
+      title: プライバシーポリシー
