--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -59,3 +59,12 @@ ja:
       title: 利用規約
     privacy:
       title: プライバシーポリシー
+  password_resets:
+    new:
+      title: パスワードリセット申請
+    edit:
+      title: パスワードリセット
+    create:
+      success: メールを送信しました
+    update:
+      success: パスワードを変更しました
